# errdiff

./: .gitignore  .golangci.yaml  BUILD.bazel  LICENSE  README.md  WORKSPACE  errdiff.go  errdiff_test.go  go.mod  go.sum
.circleci/: config.yaml  config.yml
.github/workflows/: test.yaml
