load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/h-fam/errdiff
gazelle(
    name = "gazelle",
    #    external = "vendored",
)

go_library(
    name = "go_default_library",
    srcs = ["errdiff.go"],
    importpath = "source.cloud.google.com/hines-alloc/brain",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["errdiff_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
    ],
)
